removed offset and change col-8 to col-12 fixes center alignment on rtl languages added #rtl css for all elements needed alignment fixes resolves #330

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -463,6 +463,9 @@ main.landing-page > .background-wrapper {
   z-index: 100000;
   background-color: #ebf0f3;
 }
+#rtl .dropdown-menu {
+  text-align: right;
+}
 
 .language .dropdown-item  {
   text-transform: capitalize;
@@ -1796,6 +1799,14 @@ footer .company-mission {
   font-size: 3rem;
   line-height: 3.75rem;
 }
+#rtl .creator-hero-graphic, .creator-hero-graphic .foreground-content  {
+  -moz-transform: scaleX(-1);
+  -o-transform: scaleX(-1);
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+  filter: FlipH;
+  -ms-filter: "FlipH";
+}
 
 /* verticals section */
 .creator-verticals-graphic {
@@ -1817,6 +1828,10 @@ footer .company-mission {
 .creator-verticals .media b, .creator-verticals .media p {
   font-size: 1.25rem;
   margin: 5px 0px 5px 30px;
+}
+
+#rtl .creator-verticals .media b, #rtl .creator-verticals .media p {
+  margin: 5px 30px 5px 0px;
 }
 
 /* reasons section */
@@ -1868,23 +1883,61 @@ footer .company-mission {
   background-color: #1a82ff;
   background-image: url("/static/img/blue-coins.svg");
 }
+#rtl .reasons .blue-coins {
+  -moz-transform: scaleX(-1);
+  -o-transform: scaleX(-1);
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+  filter: FlipH;
+  -ms-filter: "FlipH";
+}
 .reasons .purple-censorship {
   background-color: #6e3bea;
   background-image: url("/static/img/purple-censorship.svg");
+}
+#rtl .reasons .purple-censorship {
+  -moz-transform: scaleX(-1);
+  -o-transform: scaleX(-1);
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+  filter: FlipH;
+  -ms-filter: "FlipH";
 }
 .reasons .green-coins {
   background-color: #26d198;
   background-image: url("/static/img/green-coins.svg");
 }
+#rtl .reasons .green-coins {
+  -moz-transform: scaleX(-1);
+  -o-transform: scaleX(-1);
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+  filter: FlipH;
+  -ms-filter: "FlipH";
+}
 .reasons .red-boxes {
   background-color: #ff1a1a;
   background-image: url("/static/img/red-boxes.svg");
+}
+#rtl .reasons .red-boxes {
+  -moz-transform: scaleX(-1);
+  -o-transform: scaleX(-1);
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+  filter: FlipH;
+  -ms-filter: "FlipH";
 }
 .reasons .earn-tokens .inner-box {
   padding-top: 90px;
 }
 .reasons .borderless-payments .inner-box {
   padding-top: 70px;
+}
+#rtl .reasons .earn-tokens .inner-box, 
+#rtl .reasons .borderless-payments .inner-box, 
+#rtl .reasons .run-business .inner-box,
+#rtl .reasons .bootstrap-marketplace .inner-box {
+  text-align: right;
 }
 
 /* features section */
@@ -1915,6 +1968,10 @@ footer .company-mission {
   margin-right: 20px;
   width: 30px;
   height: 30px;
+}
+
+.creator-features img {
+  margin-left: 20px;
 }
 
 .creator-bottom-cta {
